--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
                         <a href="mailto:celitolk@outlook.com">celitolk@outlook.com</a>
                     </div>
                     
-                    <p class="lead mb-5 justificado" >Com MBA em Segurança e Defesa Cibernética e especialização em Ciências de Dados e Inteligência Artificial, em andamento. Graduando em Análise e Desenvolvimento de Sistemas e Engenheiro Mecânico. Possuo experiência em configuração/manutenção de software/hardware, liderança de equipes, montagem de balanças, supervisão em Usinagem/Soldagem/Metrologia, gestão de materiais e manutenção industrial e automotiva. Habilidades técnicas sólidas e adaptabilidade para agregar valor em diversos ambientes profissionais.</p>
+                    <p class="lead mb-5 justificado" > MBA em Segurança e Defesa Cibernética e especialização em Ciências de Dados e Inteligência Artificial, em andamento. Graduando em Análise e Desenvolvimento de Sistemas e Engenheiro Mecânico. Possuo experiência em configuração/manutenção de software/hardware, liderança de equipes, montagem de balanças, supervisão em Usinagem/Soldagem/Metrologia, gestão de materiais e manutenção industrial e automotiva. </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://linkedin.com/in/celitokraemer"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/CelitoLK"><i class="fab fa-github"></i></a>
