--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Administrador de TI</h3>
                             <div class="subheading mb-3">Agronline Fabricação e Comércio de Equipamentos de Telemetria LTDA</div>
-                            <p class="justificado">Experiência significativa em configuração e manutenção de software e hardware, realização de testes de funcionamento, prestação de suporte técnico e supervisão do desempenho dos técnicos em campo, garantindo operações eficientes e resolução rápida de problemas.</p>
+                            <p class="justificado">Experiência na configuração e manutenção de software e hardware, realização de testes de funcionamento, prestação de suporte técnico e supervisão do desempenho dos técnicos em campo, garantindo operações eficientes e resolução rápida de problemas.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Julho 2023 - Janeiro 2024</span></div>
                     </div>    
@@ -109,7 +109,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Técnico em manutenção de balanças</h3>
                             <div class="subheading mb-3">Afts / BTC Industria de balanças e assistência técnica LTDA</div>
-                            <p class="justificado">A frente da equipe, coordenei com sucesso a montagem e liberação de uma ampla gama de balanças, incluindo modelos rodoviários, de fluxo, ensacadeiras, plataforma e bovinas em todo o Brasil. Minha experiência abrange desde a inspeção e calibração até testes operacionais e manutenção, garantindo a qualidade do produto e a satisfação do cliente em cada projeto.</p>
+                            <p class="justificado">Coordenador de montagem e liberação de uma ampla gama de balanças, incluindo modelos rodoviários, de fluxo, ensacadeiras, plataforma e bovinas em todo o Brasil. Experiência abrangindo desde a inspeção e calibração até testes operacionais e manutenção.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Março 2022 - Outubro 2022</span></div>
                     </div>
@@ -117,7 +117,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Estagiário Sala de Válvulas</h3>
                             <div class="subheading mb-3">Ambev</div>
-                            <p class="justificado"> Desenvolvi expertise no acompanhamento da manutenção de válvulas das enchedoras no setor de Packaging, demonstrando habilidades técnicas e adquirindo experiência sólida na monitorização e controle de índices cruciais, tais como perda de extrato, TPO, mal cheia, consumo de CO2 e volume de enchimento. Garantindo juntamente com a equipe a eficiência operacional e a qualidade do produto final.</p>
+                            <p class="justificado"> Acompanhamento da manutenção de válvulas das enchedoras no setor de Packaging. Monitorização e controle de índices cruciais, tais como perda de extrato, TPO, mal cheia, consumo de CO2 e volume de enchimento.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Outubro 2018 - Fevereiro 2019</span></div>
                     </div>
@@ -125,7 +125,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Estagiário Engenharia</h3>
                             <div class="subheading mb-3">Assistec</div>
-                            <p class="justificado"> Exerci supervisão e acompanhamento especializado nos setores de Usinagem, Soldagem, Metrologia e Balanceamento, adquirindo habilidades técnicas e vasta experiência em garantir a eficiência e precisão desses processos industriais. </p>
+                            <p class="justificado"> Supervisão e acompanhamento especializado nos setores de Usinagem, Soldagem, Metrologia e Balanceamento, adquirindo habilidades técnicas e vasta experiência em garantir a eficiência e precisão desses processos industriais. </p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Agosto 2017 - Dezembro 2017</span></div>
                     </div>
@@ -133,7 +133,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Almoxarife</h3>
                             <div class="subheading mb-3">Cooperativa Agropecuária de Salvador das Missões</div>
-                            <p class="justificado">Responsável pela gestão eficiente de materiais, adquirindo habilidades e vasta experiência na coordenação de todas as etapas do processo, desde o recebimento até a distribuição. Desenvolvi competências em armazenamento, controle de estoque e emissão de documentos, garantindo uma gestão fluida e organizada do fluxo de materiais.</p>
+                            <p class="justificado">Responsável pela gestão eficiente de materiais, adquirindo habilidades e vasta experiência na coordenação de todas as etapas do processo, desde o recebimento até a distribuição. Desenvolvendo competências em armazenamento, controle de estoque e emissão de documentos, garantindo uma gestão fluida e organizada do fluxo de materiais.</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Novembro 2007 - Janeiro 2009</span></div>
                     </div>
