--- a/public/index.html
+++ b/public/index.html
@@ -334,7 +334,7 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 data-aos="fade-right" class="mb-5">Interesses</h2>
-                    <p data-aos="fade-left justificado"> Dedico-me à aprendizagem de novas linguagens, ferramentas e conhecimentos, através da participação em cursos, bootcamps e da constante atualização, bem como à prática e desenvolvimento de programas e ferramentas para utilização futura. </p>
+                    <p data-aos="fade-left justificado"> Dedicado à aprendizagem de novas linguagens, ferramentas e conhecimentos, através da participação em cursos, bootcamps e da constante atualização, bem como à prática e desenvolvimento de programas e ferramentas para utilização futura. </p>
                     <p class="mb-0"> </p>
                 </div>
             </section>
